package com.craftmanshipcollection.constants;

public class LoggerPrefix {
    
    public static final String DEBUGLOGGERPREFIX = "[DEBUG]:";
    public static final String INFOLOGGERPREFIX = "[INFO]:";
    public static final String WARNLOGGERPREFIX = "[WARN]:";
    public static final String TRACELOGGERPREFIX = "[TRACE]:";
    public static final String ERRORLOGGERPREFIX = "[ERROR]:";
    public static final String FATALLOGGERPREFIX = "[FATAL]:";

}
