package com.craftmanshipcollection.logger;

public enum LogLevel {
    
    DEBUG, INFO, TRACE, WARN, ERROR, FATAL

}
