package com.craftmanshipcollection.loggerHandlers;

public interface LoggerHandler {
    
    void log(String message) throws Exception;

}
